--- a/blog/package.json
+++ b/blog/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-loading": "^2.0.3",
+    "react-loading-components": "^1.1.12",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0"
   },
